Secciones de ubicación arregladas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
         <nav class="navbar">
           <ul>
+            <li><a href="./index.html">Inicio</a></li>
             <li>
               <a href="#home" class="active">Quienes Somos</a>
               <ul class="submenu">
@@ -302,26 +303,34 @@
       </section>
 
       <!--CONTACT SECTION DESIGN -->
+
       <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
-        <form action="#">
-          <div class="input-box">
-            <input type="text" placeholder="Full Name" />
-            <input type="email" placeholder="Email Address" />
+        <h2 class="heading">Contáctate con<span>Nosotros</span></h2>
+          <div class="contact_container">
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d121974.5619483245!2d-78.96736804296864!3d-1.5967537797514144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d3115963de9929%3A0x6905673e5759ab61!2sGallo%20Rumi!5e1!3m2!1ses!2sec!4v1748826929421!5m2!1ses!2sec" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div>
+              <form action="#">
+                <div class="input-box">
+                  <input type="text" placeholder="Full Name" />
+                  <input type="email" placeholder="Email Address" />
+                </div>
+                <div class="input-box">
+                  <input type="number" placeholder="Mobile Number" />
+                  <input type="text" placeholder="Email Subject" />
+                </div>
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  placeholder="Your Message"
+                ></textarea>
+                <input type="submit" value="Send Message" class="btn" />
+              </form>
+            </div>
           </div>
-          <div class="input-box">
-            <input type="number" placeholder="Mobile Number" />
-            <input type="text" placeholder="Email Subject" />
-          </div>
-          <textarea
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Your Message"
-          ></textarea>
-          <input type="submit" value="Send Message" class="btn" />
-        </form>
       </section>
     </main>
 
@@ -335,15 +344,9 @@
         <div class="footer-iconTop">
           <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
         </div>
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19272.565484195628!2d-78.88690593671285!3d-1.6154590001759197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d3115963de9929%3A0x6905673e5759ab61!2sGallo%20Rumi!5e0!3m2!1ses!2sec!4v1729647160930!5m2!1ses!2sec" 
-            width="185" 
-            height="90" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+        <div>
+          <a class="locate_us" href="https://maps.app.goo.gl/ntRLwFfBryQn69KeA" target="_blank">📍Ubícanos&nbsp;</a>
+        </div>
       </div>
       
       <div class="social-media">
