Redirecciones del nav arreglados, diseño de las páginas, multimedia y otras secciones mejoradas

--- a/actividades/economyActivities.html
+++ b/actividades/economyActivities.html
@@ -41,7 +41,7 @@
                 <a href="#activities" class="active">Actividades</a>
                 <ul class="submenu">
                     <li><a href="./socialActivities.html">Sociales</a></li>
-                    <li><a href="./economyActivities.html">Economicas</a></li>
+                    <li><a href="#">Económicas</a></li>
                 </ul>
                 </li>
                 <li>
@@ -185,6 +185,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!--To give the effect of typing and retyping some words-->
 
-    <script src="../script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
