--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="#activities" class="active">Actividades</a>
               <ul class="submenu">
                 <li><a href="./actividades/socialActivities.html">Sociales</a></li>
-                <li><a href="./actividades/economyActivities.html">Economicas</a></li>
+                <li><a href="./actividades/economyActivities.html">Económicas</a></li>
               </ul>
             </li>
             <li>
@@ -82,90 +82,85 @@
       </section>
 
       <!--ABOUT SECTION DESIGN -->
-      <section class="about" id="about">
+      <div class="about" id="about">
         <div class="about-img">
           <img src="./images/Foto carnet.jpg" alt="" />
         </div>
         <div class="about-content">
-          <h2 class="heading">Acerca de <span>Comunidad Kasaychi</span></h2>
-          <h3>Trayectoria</h3>
-          <p>
-            A 10 largo de los años, la comunidad ha desarrollado varias iniciativas para fomentar la educación y el bienestar
-            social, incluyendo la creación de un molino de grano en 1981, la obtención de terrenos comunales para su sede social, y
-            la implementación de proyectos de mejoramiento ganadero y procesamiento de derivados lácteos. En 2008, lograron el
-            acuerdo para operar un Bachillerato Técnico Agropecuario, un hito importante en su desarrollo educativo.
-          </p>
+          <div class="about-text">
+            <h2 class="heading">Acerca de <span>Comunidad Kasaychi</span></h2>
+            <h3 class="about-subtitle">Trayectoria</h3>
+            <p>
+              A 10 largo de los años, la comunidad ha desarrollado varias iniciativas para fomentar la educación y el bienestar
+              social, incluyendo la creación de un molino de grano en 1981, la obtención de terrenos comunales para su sede social, y
+              la implementación de proyectos de mejoramiento ganadero y procesamiento de derivados lácteos. En 2008, lograron el
+              acuerdo para operar un Bachillerato Técnico Agropecuario, un hito importante en su desarrollo educativo.
+            </p>
+          </div>
+          <div class="about-container">
             <div class="services-container">
-                <div class="services-box">
-                    <div class="img-sobre-nosotros">
-                        <img src="./images/Img1.1.png">
-                    </div><br />
-                    <h3>Nuestros Paisajes</h3>
-                    <p>
-                        Kasaychi se encuentra en una zona andina con un clima frío, situada a una altitud entre 3000 y 3400 metros sobre el
-                    nivel del mar. La comunidad está rodeada de majestuosos paisajes de montañas, valles verdes, y tierras agrícolas que
-                    reflejan la belleza y la diversidad del entorno natural en el que viven.
-                    </p>
+            <div class="about-box">
+              <div class="img-sobre-nosotros">
+                <img src="./images/Img1.1.png">
+              </div><br />
+              <div class="about-box-content">
+                <h3>Nuestros Paisajes</h3>
+                <p>
+                  Kasaychi se encuentra en una zona andina con un clima frío, situada a una altitud entre 3000 y 3400 metros sobre el
+                  nivel del mar. La comunidad está rodeada de majestuosos paisajes de montañas, valles verdes, y tierras agrícolas que
+                  reflejan la belleza y la diversidad del entorno natural en el que viven.
+                </p>
+              </div>
+              </div>
+              <div class="about-box">
+                <div class="img-sobre-nosotros">
+                  <img src="./images/Img1.2.png">
                 </div>
-                <div class="services-box">
-                    <div class="img-sobre-nosotros">
-                        <img src="./images/Img1.2.png">
-                    </div>
-                    <br/>
-                    <h3>Nuestras Tradiciones </h3>
-                    <p>
-                        Las tradiciones de la Comunidad Kasaychi están profundamente arraigadas en su herencia kichwa. Las festividades
-                        y celebraciones tienen un origen prehispánico y son una parte vital de la vida comunitaria, reflejando la cosmovisión y
-                        los valores culturales que han sido transmitidos de generación en generación.
-                    </p>
+                <br/>
+                <div class="about-box-content">
+                  <h3>Nuestras Tradiciones </h3>
+                  <p>
+                    Las tradiciones de la Comunidad Kasaychi están profundamente arraigadas en su herencia kichwa. Las festividades
+                    y celebraciones tienen un origen prehispánico y son una parte vital de la vida comunitaria, reflejando la cosmovisión y
+                    los valores culturales que han sido transmitidos de generación en generación.
+                  </p>
                 </div>
-                <div class="services-box">
-                    <div class="img-sobre-nosotros">
-                        <img src="./images/Img1.3.png">
-                    </div><br />
-                    <h3>Nuestra Gente</h3>
-                    <p>
-                        La población de Kasaychi está compuesta por aproximadamente 753 personas distribuidas en seis comunidades: Casaichi
-                        Arenal, Grupo Comunitario Cacuango, Casaichi San Antonio, Casaichi Chinipamba, Casaichi Herapamba, y Casaichi Llama
-                        Corral. La comunidad se caracteriza por su cohesión social y la participación activa de sus miembros en las actividades
-                        productivas y culturales.
-                    </p>
+              </div>
+              <div class="about-box">
+                <div class="img-sobre-nosotros">
+                  <img src="./images/Img1.3.png">
+                </div><br />
+                <div class="about-box-content">
+                  <h3>Nuestra Gente</h3>
+                  <p>
+                    La población de Kasaychi está compuesta por aproximadamente 753 personas distribuidas en seis comunidades: Casaichi
+                    Arenal, Grupo Comunitario Cacuango, Casaichi San Antonio, Casaichi Chinipamba, Casaichi Herapamba, y Casaichi Llama
+                    Corral. La comunidad se caracteriza por su cohesión social y la participación activa de sus miembros en las actividades
+                    productivas y culturales.
+                  </p>
                 </div>
-            </div>
+              </div>
+          </div>
+          </div>
         </div>
-      </section>
+      </div>
 
       <!--ACTIVITIES SECTION DESIGN -->
-      <section class="services" id="services">
-        <h2 class="heading">Actividades <span>Comunidad Kasaychi</span></h2>
-        <div class="services-container">
-          <div class="services-box">
-            <a href="./actividades/socialActivities.html">
-              <i class="fa-solid fa-users"></i>
+      <div class="activities-background">
+        <h2 class="heading">Nuestras <span>Actividades</span></h2>
+        <div class="activities-container">
+          <div class="activity-box">
               <h3>Actividades Sociales</h3>
               <p>¿Estás interesado en conocer más a fondo nuestra comunidad? ¿Deseas conocer el estilo de vida y conectar con la Naturaleza? Tenemos varias actividades que harán que ames la naturaleza y nuestra comunidad.</p>
-              <p>
-                <i class="fa-solid fa-tree"></i>
-                <i class="fa-solid fa-seedling"></i>
-                <i class="fa-solid fa-water"></i>
-              </p>
-            </a>
+            <a href="./actividades/socialActivities.html" class="btn">Leer más</a>
           </div>
-          <div class="services-box">
-            <a href="./actividades/economyActivities.html">
-              <i class="fa-solid fa-coins"></i>
-              <h3>Actividades Económicas</h3>
+          <div class="activity-box">
+            <h3>Actividades Económicas</h3>
               <p>Comunidad Kasaychi ha generado emprendimientos a partir de lo que la naturaleza le brinda para mantenerse activa, y ahora queremos que todos los conozcan y consuman. ¿Te interesa saber que productos tenemos? </p>
-              <p>
-                <i class="fa-solid fa-cow"></i>
-                <i class="fa-solid fa-bottle-water"></i>
-                <i class="fa-solid fa-cheese"></i>
-              </p>
-            </a>
+            <a href="./actividades/economyActivities.html" class="btn">Leer más</a>
           </div>
-          
         </div>
-      </section>
+      </div>
 
 
       <!--MULTIMEDIA SECTION DESIGN -->
@@ -173,131 +168,48 @@
         <div class="multimedia-container">
           <h2 class="heading">Our <span>Multimedia</span></h2>
           <div class="multimedia-principal">
-            <!-- Video multimedia-principal -->
+            <!-- Video principal -->
             <div class="multimedia-main-video" id="multimedia-main-video">
-              <img
-                src="./images/AulasEscuela.jpg"
-                alt="Aulas de la escuela"
-                style="width: 100%; height: 100%; border-radius: 8px"
-              />
+              <iframe
+                id="main-video-frame"
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/3ssL8vx7Xhg"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
             </div>
 
-            <!--Video Thumbnails  -->
+            <!-- Thumbnails -->
             <div class="multimedia-video-thumbnails">
-              <img
-              src="./images/childsEscuela.jpg"
-              alt="Niños en la escuela"
-              class="multimedia-video-thumb"
-              onclick="changeMainVideo('./images/childsOnSchool.mp4')"
-            />
-            <video id="main-video" width="100%" style="display: none;" controls >
-              <source id="video-source" src="./images/childsOnSchool.mp4" type="video/mp4" />
-              Tu navegador no soporta videos en HTML5.
-            </video>
-            
-              <!-- <img
-                src="./images/OIP.jpg"
-                alt="Happy and Fun Pop Background Music For Videos"
-                class="multimedia-video-thumb"
-                onclick="changeMainVideo('https://www.youtube.com/embed/3ssL8vx7Xhg?list=PLgS0SSa1anukbM0QbNBw5IMsFiBYZz7CR')"
-              />
-              <img
-                src="./images/OIP.jpg"
-                alt="Juan Luis Guerra - Las avispas (Letra)"
-                class="multimedia-video-thumb"
-                onclick="changeMainVideo('https://www.youtube.com/embed/nfmdbKeSh7I','Juan Luis Guerra - Las avispas (Letra)')"
-              />
-              <img
-                src="./images/OIP.jpg"
-                alt="Juan Luis Guerra - Las avispas (Letra)"
-                class="multimedia-video-thumb"
-                onclick="changeMainVideo('https://www.youtube.com/embed/nfmdbKeSh7I','Juan Luis Guerra - Las avispas (Letra)')"
-              /> -->
-            </div>
-          </div>
-
-          <!-- Multimedia secudary content -->
-          <div class="multimedia-media-grid">
-            <div class="mutimedia-media-item">
-              <img
-                src="./images/fondoLejanoCalle.jpg"
-                alt="Vista de la calle lejana"
-                class="mutimedia-media-item-thumbnail"
-              />
-              <div class="mutimedia-media-item-overlay">
-                <p>Vista de la calle</p>
-                <span class="mutimedia-media-item-overlay-type">Imagen</span>
-              </div>
-            </div>
-            <div class="mutimedia-media-item">
-              <img
-                src="./images/fondoLejanoCalle3.jpg"
-                alt="vista lejana"
-                class="mutimedia-media-item-thumbnail"
-              />
-              <div class="mutimedia-media-item-overlay">
-                <p>Vista lejana </p>
-                <span class="mutimedia-media-item-overlay-type">Imagen</span>
-              </div>
-            </div>
-            <div class="mutimedia-media-item">
               <img
                 src="./images/childsEscuela.jpg"
                 alt="Niños en la escuela"
-                class="mutimedia-media-item-thumbnail"
+                class="multimedia-video-thumb"
+                onclick="changeMainVideo('./images/childsOnSchool.mp4')"
               />
-              <div class="mutimedia-media-item-overlay">
-                <p>Niños en la escuela</p>
-                <span class="mutimedia-media-item-overlay-type"
-                  >Publicacion</span
-                >
-              </div>
-            </div>
-            <div class="mutimedia-media-item">
+
               <img
-                src="./images/fondoEscuela.jpg"
-                alt="fondoEscuela"
-                class="mutimedia-media-item-thumbnail"
+                src="https://img.youtube.com/vi/ey4TiwQU-os/hqdefault.jpg"
+                alt="Video 1"
+                class="multimedia-video-thumb"
+                onclick="changeMainVideo('https://www.youtube.com/embed/ey4TiwQU-os')"
               />
-              <div class="mutimedia-media-item-overlay">
-                <p>Escuela</p>
-                <span class="mutimedia-media-item-overlay-type">Documento</span>
-              </div>
-            </div>
-            <div class="mutimedia-media-item">
+
               <img
-                src="./images/AulasEscuela.jpg"
-                alt="AulasEscuela"
-                class="mutimedia-media-item-thumbnail"
+                src="https://img.youtube.com/vi/5x_6mQZW5ao/hqdefault.jpg"
+                alt="Video 2"
+                class="multimedia-video-thumb"
+                onclick="changeMainVideo('https://www.youtube.com/embed/5x_6mQZW5ao')"
               />
-              <div class="mutimedia-media-item-overlay">
-                <p>Aulas de la escuela</p>
-                <span class="mutimedia-media-item-overlay-type">Imagen</span>
-              </div>
-            </div>
-            <div class="mutimedia-media-item">
+
               <img
-                src="./images/childsInWoodPlatform.jpg"
-                alt="Niños en plataforma de madera"
-                class="mutimedia-media-item-thumbnail"
+                src="https://img.youtube.com/vi/IIuFfcseE3s/hqdefault.jpg"
+                alt="Bolívar, Arte y Cultura"
+                class="multimedia-video-thumb"
+                onclick="changeMainVideo('https://www.youtube.com/embed/IIuFfcseE3s')"
               />
-              <div class="mutimedia-media-item-overlay">
-                <p>Niños en plataforma de madera"</p>
-                <span class="mutimedia-media-item-overlay-type">Documento</span>
-              </div>
             </div>
-            <div class="mutimedia-media-item">
-              <img
-                src="./images/fondoLejano.jpg"
-                alt="fondoLejano"
-                class="mutimedia-media-item-thumbnail"
-              />
-              <div class="mutimedia-media-item-overlay">
-                <p>Vista lejana de la comunidad</p>
-                <span class="mutimedia-media-item-overlay-type">Documento</span>
-              </div>
-            </div>
-            <!-- Resto de los items... -->
           </div>
         </div>
       </section>
@@ -305,7 +217,7 @@
       <!--CONTACT SECTION DESIGN -->
 
       <section class="contact" id="contact">
-        <h2 class="heading">Contáctate con<span>Nosotros</span></h2>
+        <h2 class="heading">Contáctate con <span>Nosotros</span></h2>
           <div class="contact_container">
             <div class="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d121974.5619483245!2d-78.96736804296864!3d-1.5967537797514144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d3115963de9929%3A0x6905673e5759ab61!2sGallo%20Rumi!5e1!3m2!1ses!2sec!4v1748826929421!5m2!1ses!2sec" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -369,6 +281,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!--To give the effect of typing and retyping some words-->
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
