--- a/actividades/socialActivities.html
+++ b/actividades/socialActivities.html
@@ -40,8 +40,8 @@
                 <li>
                 <a href="#activities" class="active">Actividades</a>
                 <ul class="submenu">
-                    <li><a href="./socialActivities.html">Sociales</a></li>
-                    <li><a href="./economyActivities.html">Economicas</a></li>
+                    <li><a href="#">Sociales</a></li>
+                    <li><a href="./economyActivities.html">Económicas</a></li>
                 </ul>
                 </li>
                 <li>
@@ -170,6 +170,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!--To give the effect of typing and retyping some words-->
 
-    <script src="../script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
