--- a/proyectos/projects.html
+++ b/proyectos/projects.html
@@ -41,14 +41,14 @@
                 <a href="#activities" class="active">Actividades</a>
                 <ul class="submenu">
                     <li><a href="../actividades/socialActivities.html">Sociales</a></li>
-                    <li><a href="../actividades/economyActivities.html">Economicas</a></li>
+                    <li><a href="../actividades/economyActivities.html">Económicas</a></li>
                 </ul>
                 </li>
                 <li>
                 <a href="../multimedia/multimedia.html" class="active">Multimedia</a>
                 </li>
                 <li>
-                <a href="./proyectos/projects.html" class="active">Proyectos</a>
+                <a href="#" class="active">Proyectos</a>
                 </li>
                 <li>
                 <a href="../ubicanos/locateUs.html" class="active">Ubícanos</a>
@@ -133,6 +133,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!--To give the effect of typing and retyping some words-->
 
-    <script src="../script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
