--- a/quienesSomos/ourHistory.html
+++ b/quienesSomos/ourHistory.html
@@ -34,14 +34,14 @@
                 <a href="#home" class="active">Quienes Somos</a>
                 <ul class="submenu">
                     <li><a href="./aboutUs.html">Sobre Nosotros</a></li>
-                    <li><a href="./ourHistory.html">Nuestra historia</a></li>
+                    <li><a href="#">Nuestra historia</a></li>
                 </ul>
                 </li>
                 <li>
                 <a href="#activities" class="active">Actividades</a>
                 <ul class="submenu">
                     <li><a href="../actividades/socialActivities.html">Sociales</a></li>
-                    <li><a href="../actividades/economyActivities.html">Economicas</a></li>
+                    <li><a href="../actividades/economyActivities.html">Económicas</a></li>
                 </ul>
                 </li>
                 <li>
@@ -196,6 +196,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!--To give the effect of typing and retyping some words-->
 
-    <script src="../script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
