--- a/ubicanos/locateUs.html
+++ b/ubicanos/locateUs.html
@@ -156,7 +156,7 @@
       </div>
       <div class="footer-center">
         <div class="footer-iconTop">
-          <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+          <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
         <div>
           <a class="locate_us" href="https://maps.app.goo.gl/ntRLwFfBryQn69KeA" target="_blank">📍Ubícanos&nbsp;</a>
