Ultima actualización Styles

--- a/quienesSomos/aboutUs.html
+++ b/quienesSomos/aboutUs.html
@@ -12,7 +12,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comunidad Kasaychi</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../Styles/sobreNosotros_Styles.css" />
   </head>
   <body>
     <!-- HEADER DESIGN -->
@@ -125,7 +125,7 @@
         </section>
         <!--Contact Us-->
         <section class="contact" id="contact">
-        <h2 class="heading">Contáctate con<span>Nosotros</span></h2>
+        <h2 class="heading">Contáctate con <span>Nosotros</span></h2>
           <div class="contact_container">
             <div class="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d121974.5619483245!2d-78.96736804296864!3d-1.5967537797514144!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d3115963de9929%3A0x6905673e5759ab61!2sGallo%20Rumi!5e1!3m2!1ses!2sec!4v1748826929421!5m2!1ses!2sec" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
