--- a/ubicanos/locateUs.html
+++ b/ubicanos/locateUs.html
@@ -12,16 +12,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comunidad Kasaychi</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../Styles/ubicanos_Styles.css" />
   </head>
   <body>
     <!-- HEADER DESIGN -->
     <header class="header">
         <div class="headerLogo">
             <a href="../index.html" class="logo"><img src="../images/KasaychiKunapak.png" alt="logo" /></a>
-            <!--<i class="fa-brands fa-cloudflare"></i>-->
-        </div>
-      
+        </div>     
       
         <div class="headerMenu">
             <div class="menuToggle" >
@@ -31,14 +29,14 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li>
-                <a href="#home" class="active">Quienes Somos</a>
+                <a href="../quienesSomos/aboutUs.html" class="active">Quienes Somos</a>
                 <ul class="submenu">
                     <li><a href="../quienesSomos/aboutUs.html">Sobre Nosotros</a></li>
                     <li><a href="../quienesSomos/ourHistory.html">Nuestra historia</a></li>
                 </ul>
                 </li>
                 <li>
-                <a href="#activities" class="active">Actividades</a>
+                <a href="../actividades/socialActivities.html" class="active">Actividades</a>
                 <ul class="submenu">
                     <li><a href="../actividades/socialActivities.html">Sociales</a></li>
                     <li><a href="../actividades/economyActivities.html">Económicas</a></li>
