--- a/actividades/economyActivities.html
+++ b/actividades/economyActivities.html
@@ -12,7 +12,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comunidad Kasaychi</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../Styles/economyActivites.css" />
   </head>
   <body>
     <!-- HEADER DESIGN -->
