--- a/multimedia/multimedia.html
+++ b/multimedia/multimedia.html
@@ -12,7 +12,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comunidad Kasaychi</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../Styles/multimedia_Styles.css" />
   </head>
   <body>
     <!-- HEADER DESIGN -->
@@ -93,7 +93,7 @@
       </div>
       <div class="footer-center">
         <div class="footer-iconTop">
-          <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+          <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
         <div>
           <a class="locate_us" href="https://maps.app.goo.gl/ntRLwFfBryQn69KeA" target="_blank">📍Ubícanos&nbsp;</a>
