Añadir fondo a la sección "Ubícanos" en locateUs.html

--- a/ubicanos/locateUs.html
+++ b/ubicanos/locateUs.html
@@ -60,7 +60,7 @@
         <!--ABOUT SECTION DESIGN -->
         
           <div>
-            <div class="locateUs_background">
+            <div class="locateUs_background" style="background-image: url('../images/fondodehojas.jpg');">
               <div class="locateUs">
                 <h2 class="locateUs_heading">Ubícanos</h2>
                 <div class="locateUs_container">
